--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -11,6 +11,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>pet-clinic-data</artifactId>
+    <properties>
+    <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -39,41 +42,11 @@
         </dependency>
     </dependencies>
 
-  <!--  <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-             <executions>
-                 <execution>
-                     <goals>
-                         <goal>repackage
-                         </goal>
-                     </goals>
-                     <configuration>
-                         <skip>true</skip>
-                     </configuration>
-                 </execution>
-             </executions>
-            </plugin>
-        </plugins>
-    </build>-->
     <build>
     <plugins>
         <plugin>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
-            <executions>
-                <execution>
-                    <id>repackage</id>
-                    <goals>
-                        <goal>repackage</goal>
-                    </goals>
-                    <configuration>
-                        <skip>true</skip>
-                    </configuration>
-                </execution>
-            </executions>
         </plugin>
     </plugins>
     </build>
