--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -123,6 +123,11 @@
                         <artifactId>mockito-core</artifactId>
                         <version>2.23.0</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.mockito</groupId>
+                        <artifactId>mockito-junit-jupiter</artifactId>
+                        <scope>test</scope>
+                    </dependency>
                 </dependencies>
             </plugin>
             <plugin>
