--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -93,6 +93,10 @@
             <version>2.22.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 
 
