--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 spring.messages.basename=messages/messages
 
 spring.profiles.active=springdatajpa
+
+
+#spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
